--- a/index.html
+++ b/index.html
@@ -7,6 +7,60 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="root"></div>
+  <script>
+    const root=document.getElementById('root');
+    const makeUl=document.createElement('ul');
+    root.appendChild(makeUl);
+    /* 1
+    makeUl.style.width="100px";
+    makeUl.style.height="100px";
+    makeUl.style.border="1px solid black"; */
+
   
+    const ulStyleObject=["width","height","border"];
+    //1.3
+    const ulStyleValue=["100px","100px","1px solid black"];
+
+/* //1.2
+    // 문자열은 대괄호[]
+    makeUl.style[ulStyleObject[0]]="100px"
+    makeUl.style[ulStyleObject[1]]="100px"
+    makeUl.style[ulStyleObject[2]]="1px solid black" */
+
+   /*  //1.3
+    for(let i=0;i<ulStyleObject.length;i++){
+      makeUl.style[ulStyleObject[i]]=ulStyleValue[i];
+    }
+ */
+// 1.5
+    let domStyle={
+      firstArray:["width","height","border"],
+      secondArray:["100px","100px","1px solid black"],
+      element:root.children[0]
+    }
+
+
+//1.4
+    function twoArrayDOMstyleing(firstArray,secondArray,element){
+      for(let i=0;i<firstArray.length;i++){
+        element.style[firstArray[i]]=secondArray[i];
+    }
+    }
+    twoArrayDOMstyleing(ulStyleObject,ulStyleValue,makeUl);
+
+
+    function two(first,second, element1){
+      
+    }
+
+    // 1.6 1.4를 가져와서 object로 변경
+    function oneObjectDOMStyling(object){
+      for(let i=0;i<object.firstArray.length;i++){
+        object.style[object.firstArray[i]]=object.secondArray[i];
+    }
+    }
+
+  </script>
 </body>
 </html>
